--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -1,53 +1,56 @@
 .NavbarItems{
-    background-color: #fff;
+    background-color: rgba(139, 209, 255, 0.48);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 30px;
-    box-shadow: 0 5px 15px 0  rgba(13, 13, 14, 0.25);
+    padding: 0 50px;
+    box-shadow: 0 5px 15px 0  rgba(161, 113, 239, 0.331);
     width: 95%; 
-    height: 80px;
+    height: 70px;
     border-radius: 13px;
     position: fixed;
     left:50%;
     top:10px;
     transform: translate(-50%);
-    z-index: 9999;
+    z-index: 9;
     }
 .navbar-logo {
-    color: #d4a2a2; 
-    font-size: 2rem;
+    display: flex;
+    padding-right: 3px;
+    color: #000000; 
+    font-size: 20px;
     cursor: pointer
 }
 .nav-menu{
     display: grid;
-    grid-template-columns: repeat(6,auto);
-    grid-gap: 10px;
+    grid-template-columns: repeat(7,auto);
+    padding-top: 15px;
+    grid-gap: 5px;
     list-style: none;
     align-items: center;
 }
 .nav-links{
     text-decoration: none;
-    color: #222; 
+    color: #000000; 
     font-size:1.2rem; 
     font-weight: 600; 
     padding: 0.7rem 1rem; 
     white-space: nowrap;
 }
 .nav-links I{
-    padding-right: 10px;
+    padding-right: 5px;
 }
     
 .nav-links:hover{
-    background-color: #095079;
-    color: #fff; 
+    background-color: #90c3e0;
+    color: #000000; 
     border-radius:4px;
     transition: all 0.2s ease-in-out;
 }
 .menu-icons{
     display: none;
 }
-@media screen and (max-width: 850px){
+@media screen and (max-width: 650px){
     .NavbarItems{
         z-index: 99;
     }
@@ -55,12 +58,12 @@
         display: flex;
         flex-direction: column; 
         justify-content: flex-start;
-        background: rgb(60, 252, 108);
+        /* background: rgb(60, 252, 108); */
         width: 100%;
         height: auto;
         position: absolute;
-        top: 0; 
-        left: -100%;
+        /* top: 0;  */
+        /* left: -100%; */
         opacity: 0;
         align-items: stretch;
         padding: 80px 0 30px 0;
